sprint 11 после прогона тестов из постман